[package]
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
categories = ["api-bindings"]
description = "API bindings for Google Sign-In"
documentation = "https://docs.rs/google-signin"
edition = "2018"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
license = "MIT/Apache-2.0"
name = "google-signin"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
version = "0.3.1"

[features]
default = ["with-rustls"]
with-openssl = ["hyper-openssl"]
with-rustls = ["hyper-rustls"]

[dependencies]
bytes = "^1.0.1"
cache_control = "0.1.0"
hyper = "^0.14.5"
hyper-openssl = {version = "^0.9.1", optional = true}
hyper-rustls = {version = "^0.22.1", optional = true}
jsonwebtoken = "^7"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
futures = "0.3"
tokio = "1.4.0"
